syntax = "proto3";
option go_package = "pb";

message MessageBody {
    string JSON = 1;
}
